// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> matches snapshot 1`] = `
<div>
  <div
    class="css-1edcpzt-container-container"
  >
    <div>
      75
      %
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> matches snapshot with zero percent 1`] = `
<div>
  <div
    class="css-1n88rpj-container-container"
  >
    <div>
      0
      %
    </div>
  </div>
</div>
`;
